# immersive-entertainment-system-libraries

./: .gitignore  CMakeLists.txt  README.md  multicast.h
image_processing/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ScreenCapture  cmake_install.cmake  jugnu
image_processing/code/: BackgroundSubtractor.cpp  ModifyImage.cpp  ScreenCapture.cpp
image_processing/executable/: DisplayImage  Meanshift  ModifyImage  ScreenCapture
image_processing/outdata/: null
image_processing/sample/: .gitignore  CMakeCache.txt  Makefile  README.md  ScreenCapture.cpp  cmake_install.cmake
